--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Blooks Collection - Scratchlet</title>
+<title>Scratchlet - Blooks</title>
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
   body {
-    margin: 0;
-    font-family: 'Nunito', sans-serif;
-    background: #f0f0f0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-  }
-
+            font-family: "Nunito", sans-serif;
+            background: 
+                linear-gradient(rgba(210, 180, 140, 0.15) 1px, transparent 1px),
+                linear-gradient(90deg, rgba(210, 180, 140, 0.15) 1px, transparent 1px),
+                linear-gradient(135deg, #FF8C00 0%, #FFA500 100%);
+            background-size: 40px 40px;
+            margin: 0;
+            padding: 20px;
+            min-height: 100vh;
+            position: relative;
+            color: white;
+        }
   header {
     position: fixed;
     top: 0; left: 0; right: 0;
